    - Execute some code via function pointers rathr than direct calls
    - Make the copy-back of data optional
    - Support processing of data from previous requests
    - Add sha1 and hmac(sha1) async hash drivers

  [ Bastian Blank ]
  * Disable mISDN support for NETJet cards. The driver binds a generic PCI
    bridge.
  * Disable ISDN4Linux drivers.

 -- dann frazier <dannf@debian.org>  Tue, 01 Jun 2010 09:23:57 -0600

linux-2.6 (2.6.32-15) unstable; urgency=low

  [ Ben Hutchings ]
  * [hppa] Ignore ABI change caused by disabling CONFIG_IDE_TIMINGS
  * [powerpc] Fix unnecessary ABI change

  [ Bastian Blank ]
  * xen: Fix crash in netback.

 -- Ben Hutchings <ben@decadent.org.uk>  Tue, 01 Jun 2010 01:31:05 +0100

linux-2.6 (2.6.32-14) unstable; urgency=low

  [ Ben Hutchings ]
  * [ia64] Hardcode the output of the scripts under arch/ia64/scripts so
    that we can build out-of-tree modules correctly (refresh and re-add
    dropped patch) (Closes: #392592)
  * vlan/macvlan: propagate transmission state to upper layers
  * macvlan: add GRO bit to features mask
  * macvlan: allow multiple driver backends
  * Add macvtap driver (Closes: #568755)
  * [ia64] Enable SGI SN support and mspec driver (Closes: #582224)
  * iwlwifi: Disable QoS when connected to a non-QoS-capable AP
    (Closes: #578262)
  * [x86] Disable e_powersaver cpufreq driver as unsafe. It has already
    been blacklisted by cpufrequtils. The acpi-cpufreq driver can be used
    instead on some VIA C7 systems. (Closes: #566208)
  * nouveau: Fix fbcon corruption with font width not divisible by 8
    (Closes: #583162)
  * [amd64] ext4: Fix compat EXT4_IOC_ADD_GROUP (used by online resize)
  * Install debug kernel image in /usr/lib/debug/boot (Closes: #582810)
  * net: sysfs: Check for null ethtool_ops before getting speed/duplex
  * Add stable 2.6.32.14:
    - [hppa] Revert "parisc: Set PCI CLS early in boot.", erroneously
      included in 2.6.32.13 causing FTBFS