@@ -72,6 +72,9 @@ linux-2.6 (2.6.32-16) UNRELEASED; urgency=low
     bridge.
   * Disable ISDN4Linux drivers.
 
+  [ maximilian attems]
+  * Update openvz patch to 5fd638726a69.
+
  -- dann frazier <dannf@debian.org>  Tue, 01 Jun 2010 09:23:57 -0600
 
 linux-2.6 (2.6.32-15) unstable; urgency=low
